<resources>
    <string name="app_name">ErezTicTacToe</string>
    <string name="Login">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="LOGIN">LOGIN</string>
    <string name="change_password">Change Password</string>
    <string name="user_id">User ID</string>
    <string name="new_password">new password</string>
    <string name="update_password">Update Password</string>
    <string name="turn">turn</string>
    <string name="restart">restart</string>
    <string name="wins">wins</string>
    <string name="draws">draws</string>
    <string name="losses">losses</string>
    <string name="set_x">set x</string>
    <string name="set_o">set o</string>

</resources>