<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingHorizontal="80dp"
    android:gravity="center_horizontal"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="30sp"
        android:layout_marginVertical="100dp"
        android:textStyle="bold"
        android:textColor="@color/foreground"/>

    <EditText
        android:padding="10dp"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/Username"
        android:autofillHints="username"
        android:textColorHint="@color/gray"
        android:textColor="@color/foreground"
        android:inputType="text"
        android:background="@drawable/rounded_bg" />

    <EditText
        android:padding="10dp"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/foreground"
        android:background="@drawable/rounded_bg" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/foreground"
        android:textColor="@color/background"
        android:text="@string/Login"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#999999"
        android:layout_marginTop="360dp"
        android:text="@string/ForgotPassword" />

</androidx.appcompat.widget.LinearLayoutCompat>