<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <RadioGroup
            android:id="@+id/playerSelector"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/turn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/x_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:checked="true"
                android:contentDescription="@string/set_x"
                android:scaleType="fitCenter"
                android:button="@drawable/ic_x" />

            <RadioButton
                android:id="@+id/o_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/set_o"
                android:scaleType="fitCenter"
                android:button="@drawable/ic_o" />
        </RadioGroup>

        <TextView
            android:id="@+id/turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_bg"
            android:drawablePadding="15dp"
            android:fontFamily="@font/transformers"
            android:paddingHorizontal="10dp"
            android:paddingTop="6dp"
            android:paddingBottom="10dp"
            android:text="@string/turn"
            android:textColor="@color/gray"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/ic_x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/restart"
            app:layout_constraintStart_toEndOf="@id/playerSelector"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/restart"
            android:drawableTint="@color/gray"
            android:paddingHorizontal="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/turn"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/tttBoard"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:columnCount="3"
        android:rowCount="3"
        android:padding="30dp">

    </GridLayout>

    <LinearLayout
        android:paddingTop="25dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/wins"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/ixs"
            android:gravity="center"
            android:layout_marginHorizontal="25dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/draws"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/gray"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/losses"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/igul"
            android:gravity="center"
            android:layout_marginHorizontal="25dp"/>



    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>