<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteA"
    android:padding="25dp">

    <TextView
        android:id="@+id/update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/update_user_ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/transformers"/>
    <EditText
        android:id="@+id/update_user_ID"
        android:layout_marginVertical="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/user_id"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/update_title"
        app:layout_constraintBottom_toTopOf="@+id/update_user_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/transformers"
        android:padding="10dp"
        android:background="@drawable/rounded_bg"
        android:textColor="@color/gray"/>
    <EditText
        android:id="@+id/update_user_username"
        android:layout_marginVertical="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/Username"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/update_user_ID"
        app:layout_constraintBottom_toTopOf="@+id/update_user_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/transformers"
        android:padding="10dp"
        android:background="@drawable/rounded_bg"
        android:textColor="@color/gray"/>
    <EditText
        android:id="@+id/update_user_password"
        android:layout_marginVertical="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/update_user_username"
        app:layout_constraintBottom_toTopOf="@+id/update_update_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/transformers"
        android:padding="10dp"
        android:background="@drawable/rounded_bg"
        android:textColor="@color/gray"/>
    <Button
        android:id="@+id/update_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        app:layout_constraintTop_toBottomOf="@id/update_user_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/transformers"
        android:backgroundTint="@color/foreground"
        android:textColor="@color/whiteA"/>

</androidx.constraintlayout.widget.ConstraintLayout>